--- a/bow.html
+++ b/bow.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Bows - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,39 +24,43 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Bows</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="8">
+                        <img class="hover-foto" src="img/bow/black_bow_of_pharis.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="24">
+                        <img class="hover-foto" src="img/bow/composite_bow.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="29">
+                        <img class="hover-foto" src="img/bow/darkmoon_bow_1.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="71">
+                        <img class="hover-foto" src="img/bow/longbow.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
+                    <a class="icon-a" id="96">
+                        <img class="hover-foto" src="img/bow/short_bow.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="39">
+                        <img class="hover-foto" src="img/bow/dragonslayer_greatbow.png">
                     </a>
                 </div>
-                
+                <div class="icon">
+                    <a class="icon-a" id="51">
+                        <img class="hover-foto" src="img/bow/Gough's Greatbow.png">
+                    </a>
+                </div>
             </div>
         </div>
         <div class="stats-bg" id="stats-dagger">
