--- a/curved.html
+++ b/curved.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Curved Swords - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,39 +24,43 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Curved Swords</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="42">
+                        <img class="hover-foto" src="img/curved/falchion.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="49">
+                        <img class="hover-foto" src="img/curved/gold-tracer.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="67">
+                        <img class="hover-foto" src="img/curved/jagged-ghost-blade.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="83">
+                        <img class="hover-foto" src="img/curved/painting_guardian_sword.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
+                    <a class="icon-a" id="89">
+                        <img class="hover-foto" src="img/curved/quelaags_furysword.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="93">
+                        <img class="hover-foto" src="img/curved/scimitar.png">
                     </a>
                 </div>
-                
+                <div class="icon">
+                    <a class="icon-a" id="98">
+                        <img class="hover-foto" src="img/curved/shotel.png">
+                    </a>
+                </div>
             </div>
         </div>
         <div class="stats-bg" id="stats-dagger">
