--- a/great-hammer.html
+++ b/great-hammer.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Great Hammers - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,36 +24,36 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Great Hammers</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="31">
+                        <img class="hover-foto" src="img/great-hammer/demons_great_hammer.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="38">
+                        <img class="hover-foto" src="img/great-hammer/dragon_tooth.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="52">
+                        <img class="hover-foto" src="img/great-hammer/grant.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="54">
+                        <img class="hover-foto" src="img/great-hammer/great_club.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
+                    <a class="icon-a" id="68">
+                        <img class="hover-foto" src="img/great-hammer/large_club.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="101">
+                        <img class="hover-foto" src="img/great-hammer/smoughs_hammer_1.png">
                     </a>
                 </div>
                 
