--- a/greatsword.html
+++ b/greatsword.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Greatswords - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,36 +24,106 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Greatswords</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="0">
+                        <img class="hover-foto" src="img/greatsword/Abyss Greatsword.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="6">
+                        <img class="hover-foto" src="img/greatsword/bastard_sword.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="12">
+                        <img class="hover-foto" src="img/greatsword/black_knight_sword.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="10">
+                        <img class="hover-foto" src="img/greatsword/black_knight_greatsword.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
+                    <a class="icon-a" id="22">
+                        <img class="hover-foto" src="img/greatsword/claymore.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="30">
+                        <img class="hover-foto" src="img/greatsword/demon_great_machete.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="35">
+                        <img class="hover-foto" src="img/greatsword/dragon_greatsword.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="43">
+                        <img class="hover-foto" src="img/greatsword/flamberge.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="53">
+                        <img class="hover-foto" src="img/greatsword/gravelord_sword.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="55">
+                        <img class="hover-foto" src="img/greatsword/great_lord_greatsword_1.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="58">
+                        <img class="hover-foto" src="img/greatsword/greatsword.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="59">
+                        <img class="hover-foto" src="img/greatsword/greatsword_of_artorias.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="60">
+                        <img class="hover-foto" src="img/greatsword/greatsword_of_artorias_3.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="76">
+                        <img class="hover-foto" src="img/greatsword/manserpent_greatsword.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="78">
+                        <img class="hover-foto" src="img/greatsword/moonlight_greatsword.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="80">
+                        <img class="hover-foto" src="img/greatsword/murakumo.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="82">
+                        <img class="hover-foto" src="img/greatsword/Obsidian Greatsword.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="95">
+                        <img class="hover-foto" src="img/greatsword/server.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="105">
+                        <img class="hover-foto" src="img/greatsword/stone_greatsword.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="115">
+                        <img class="hover-foto" src="img/greatsword/zweihander.png">
                     </a>
                 </div>
                 
@@ -64,7 +134,7 @@
                 <div class="bloco" id="top-left">
                     <table>
                         <p id="name">Weapon Name</p>
-                        <tr> <td id="weapon_category"  title="category">Weapon Type</td> <td></td> </tr>
+                        <tr> <td id="weapon_category" title="category">Weapon Type</td> <td></td> </tr>
                         <tr>
                             <td>
                                 <img src="img/stats/wei.png" title="weight">
