--- a/halberd.html
+++ b/halberd.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Halberds - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,42 +24,56 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Halberds</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="11">
+                        <img class="hover-foto" src="img/halberd/black_knight_halberd.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="46">
+                        <img class="hover-foto" src="img/halberd/gargoyles_halberd.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="48">
+                        <img class="hover-foto" src="img/halberd/giants_halberd.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="56">
+                        <img class="hover-foto" src="img/halberd/great_scythe.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
+                    <a class="icon-a" id="62">
+                        <img class="hover-foto" src="img/halberd/halberd.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="69">
+                        <img class="hover-foto" src="img/halberd/lifehunt_scythe_1.png">
                     </a>
                 </div>
-                
+                <div class="icon">
+                    <a class="icon-a" id="73">
+                        <img class="hover-foto" src="img/halberd/lucerne.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="94">
+                        <img class="hover-foto" src="img/halberd/scythe.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="108">
+                        <img class="hover-foto" src="img/halberd/titanite_catch_pole.png">
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="stats-bg" id="stats-dagger">
+        <div class="stats-bg">
             <div id="stats-grid">
                 <div class="bloco" id="top-left">
                     <table>
