--- a/hammer.html
+++ b/hammer.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Hammers - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,42 +24,56 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Hammers</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="13">
+                        <img class="hover-foto" src="img/hammer/blacksmith_giant_hammer.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="14">
+                        <img class="hover-foto" src="img/hammer/blacksmith_hammer.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="23">
+                        <img class="hover-foto" src="img/hammer/Club.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="63">
+                        <img class="hover-foto" src="img/hammer/hammer_of_vamos.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
+                    <a class="icon-a" id="74">
+                        <img class="hover-foto" src="img/hammer/mace.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="79">
+                        <img class="hover-foto" src="img/hammer/morning_star.png">
                     </a>
                 </div>
-                
+                <div class="icon">
+                    <a class="icon-a" id="86">
+                        <img class="hover-foto" src="img/hammer/pickaxe.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="91">
+                        <img class="hover-foto" src="img/hammer/reinforced_club.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="111">
+                        <img class="hover-foto" src="img/hammer/warpick.png">
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="stats-bg" id="stats-dagger">
+        <div class="stats-bg">
             <div id="stats-grid">
                 <div class="bloco" id="top-left">
                     <table>
