--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,6 +40,90 @@
                     </div>
                     Straight Swords
                 </a> 
+                <a href="thrust.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/thrust.png" class="cat-img">
+                    </div>
+                    Thrusting Swords
+                </a>
+                <a href="curved.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/curved.png" class="cat-img">
+                    </div>
+                    Curved Swords
+                </a>
+                <a href="greatsword.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/greatsword.png" class="cat-img">
+                    </div>
+                    Greatswords
+                </a>
+                <a href="axe.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/axe.png" class="cat-img">
+                    </div>
+                    Axes
+                </a> 
+                <a href="greataxe.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/greataxe.png" class="cat-img">
+                    </div>
+                    Greataxes
+                </a> 
+                <a href="hammer.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/hammer.png" class="cat-img">
+                    </div>
+                    Hammers
+                </a>
+                <a href="great-hammer.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/great-hammer.png" class="cat-img">
+                    </div>
+                    Great Hammers
+                </a>
+                <a href="katana.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/katana.png" class="cat-img">
+                    </div>
+                    Katanas
+                </a>
+                <a href="halberd.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/halberd.png" class="cat-img">
+                    </div>
+                    Halberds
+                </a> 
+                <a href="spear.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/spear.png" class="cat-img">
+                    </div>
+                    Spears
+                </a> 
+                <a href="gauntlet.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/gauntlet.png" class="cat-img">
+                    </div>
+                    Gauntlets
+                </a>
+                <a href="whip.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/whip.PNG" class="cat-img">
+                    </div>
+                    Whips
+                </a>
+                <a href="bow.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/bow.png" class="cat-img">
+                    </div>
+                    Bows
+                </a>
+                <a href="crossbow.html" class="cat-link">
+                    <div class="cat">
+                        <img src="img/class/crossbow.png" class="cat-img">
+                    </div>
+                    Crossbows
+                </a>
             </div>
         </div>
     </div>
