--- a/straight.html
+++ b/straight.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Airon Lazzaretti" />
+    <meta name="author" content="Airon Lazzaretti"/>
     <meta name="description" content="Site de informações sobre os atributos das armas do jogo Dark Souls." />
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Dark Souls Weapons API</title>
+    <title>Straight Swords - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Weapon Name</p>
+            <p id="hover-nome">Straight Swords</p>
             <div id="hover-grid">
                 <div class="icon">
                     <a class="icon-a" id="1">
@@ -89,12 +89,12 @@
                 
             </div>
         </div>
-        <div class="stats-bg" id="stats-dagger">
+        <div class="stats-bg">
             <div id="stats-grid">
                 <div class="bloco" id="top-left">
                     <table>
                         <p id="name">Weapon Name</p>
-                        <tr> <td id="weapon_category">Weapon Type</td> <td></td> </tr>
+                        <tr> <td id="weapon_category"  title="category">Weapon Type</td> <td></td> </tr>
                         <tr>
                             <td>
                                 <img src="img/stats/wei.png" title="weight">
