--- a/gauntlet.html
+++ b/gauntlet.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Gauntlets - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,39 +24,23 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Gauntlets</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="18">
+                        <img class="hover-foto" src="img/gauntlet/caestus.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="21">
+                        <img class="hover-foto" src="img/gauntlet/claw.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="34">
+                        <img class="hover-foto" src="img/gauntlet/dragon_bone_fist_1.png">
                     </a>
                 </div>
-                <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
-                    </a>
-                </div>
-                <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
-                    </a>
-                </div>
-                <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
-                    </a>
-                </div>
-                
             </div>
         </div>
         <div class="stats-bg" id="stats-dagger">
