--- a/spear.html
+++ b/spear.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Spears - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,42 +24,61 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Spears</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="19">
+                        <img class="hover-foto" src="img/spear/channelers_trident.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="33">
+                        <img class="hover-foto" src="img/spear/demons_spear.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="37">
+                        <img class="hover-foto" src="img/spear/dragonslayer_spear_9.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="44">
+                        <img class="hover-foto" src="img/spear/Four-pronged Plow.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
+                    <a class="icon-a" id="77">
+                        <img class="hover-foto" src="img/spear/moonlight_butterfly_horn_9.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="85">
+                        <img class="hover-foto" src="img/spear/partizan.png">
                     </a>
                 </div>
-                
+                <div class="icon">
+                    <a class="icon-a" id="87">
+                        <img class="hover-foto" src="img/spear/pike.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="99">
+                        <img class="hover-foto" src="img/spear/silver_knight_spear.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="103">
+                        <img class="hover-foto" src="img/spear/spear.png">
+                    </a>
+                </div>
+                <div class="icon">
+                    <a class="icon-a" id="114">
+                        <img class="hover-foto" src="img/spear/winged_spear.png">
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="stats-bg" id="stats-dagger">
+        <div class="stats-bg">
             <div id="stats-grid">
                 <div class="bloco" id="top-left">
                     <table>
