--- a/thrust.html
+++ b/thrust.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Jogo, game, videogame, dark souls, fromsoftware, api, armas, fantasia" />
 
     <link rel="stylesheet" href="style.css">
-    <title>Daggers - Dark Souls Weapons API</title>
+    <title>Thrusting Swords - Dark Souls Weapons API</title>
 </head>
 <body>
     <header>
@@ -24,36 +24,31 @@
     </header>
     <div id="paineis">
         <div class="hover-bg">
-            <p id="hover-nome">Daggers</p>
+            <p id="hover-nome">Thrusting Swords</p>
             <div id="hover-grid">
                 <div class="icon">
-                    <a class="icon-a" id="26">
-                        <img class="hover-foto" src="img/daggers/dagger.png">
+                    <a class="icon-a" id="41">
+                        <img class="hover-foto" src="img/thrust/estoc.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="84">
-                        <img class="hover-foto" src="img/daggers/parrying-dagger.png">
+                    <a class="icon-a" id="90">
+                        <img class="hover-foto" src="img/thrust/rapier.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="4">
-                        <img class="hover-foto" src="img/daggers/bandits-knife.png">
+                    <a class="icon-a" id="92">
+                        <img class="hover-foto" src="img/thrust/ricards-rapier.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="47">
-                        <img class="hover-foto" src="img/daggers/ghost-blade.png">
+                    <a class="icon-a" id="75">
+                        <img class="hover-foto" src="img/thrust/mail-breaker.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <a class="icon-a" id="27">
-                        <img class="hover-foto" src="img/daggers/dark-silver-tracer.png">
-                    </a>
-                </div>
-                <div class="icon">
-                    <a class="icon-a" id="88">
-                        <img class="hover-foto" src="img/daggers/priscillas-dagger.png">
+                    <a class="icon-a" id="110">
+                        <img class="hover-foto" src="img/thrust/velkas-rapier.png">
                     </a>
                 </div>
                 
